# ica-web

./: Cargo.toml  README.md
assets/css/: dark.css  login.css  main.css  theme.css
assets/html/: login.html  main.html
assets/js/: dark-mode.js  dark.js
demos/: login-serve.ts  main-serve.ts
src/: config.rs  ica.rs  main.rs
src/ica/: handlers.rs
