[package]
name = "ica-web"
version = "0.1.0"
edition = "2024"

[dependencies]

# ica
base64 = { version = "0.22" }
ed25519 = { version = "2.2" }
ed25519-dalek = { version = "2.1" }
hex = { version = "0.4" }
rust_socketio = { version = "0.6.0", features = ["async"] }

# data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
colored = "3.0"

# runtime
tokio = { version = "1.43", features = ["rt-multi-thread", "time", "signal", "macros"] }
futures-util = "0.3"
# pyo3 = { version = "0.24", features = ["experimental-async", "py-clone"] }
anyhow = { version = "1.0", features = ["backtrace"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time"] }

# local mem storage ( hash map )
foldhash = "0.1.4"

# web
axum = "0.8.1"


[patch.crates-io]
rust_socketio = { git = "https://github.com/shenjackyuanjie/rust-socketio.git", branch = "main" }
